# octetos-G

./: Makefile.am  configure.ac
B01/: 02-squared.cc  02.cc  03.cc  04.cc  05.cc  06.cc  Makefile.am  controls.cc
B02/: 02.cc  03-fragment.glsl  04-fragment.glsl  04-tessellation.glsl  04.cc  Makefile.am
B03/: 01.cc  Makefile.am
src/: Color.cc  G.hh  Makefile.am  Shader.cc  Shader.hh  TA-02-squared.cc  TA-02.cc  TA-03.cc  TA-04.cc  TA-05.cc  TA-06.cc  TB-01.cc  TB-02.cc  TB-03-vertex.glsl  TB-03.cc  develop.cc  gl.cc  gl.hh  space.hh  window.cc  window.hh
tests/: Makefile.am  v0.cc
